# Brief

./: README.md  com.shonebinu.Brief.json  io.github.shonebinu.Brief.json  meson.build  requirements.txt
data/: com.shonebinu.Brief.desktop.in  com.shonebinu.Brief.gschema.xml  com.shonebinu.Brief.metainfo.xml.in  com.shonebinu.Brief.service.in  io.github.shonebinu.Brief.desktop.in  io.github.shonebinu.Brief.gschema.xml  io.github.shonebinu.Brief.metainfo.xml.in  io.github.shonebinu.Brief.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: brief.gresource.xml  brief.in  main.py  meson.build  preferences.blp  preferences.py  renderer.blp  renderer.py  shortcuts-dialog.blp  sidebar.blp  sidebar.py  tldr.py  window.blp  window.py
